k8s/apps/mlflow-deployment.yaml
# mlflow-deployment.yaml: Deployment và Service cho MLflow Tracking Server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  annotations:
    description: "MLflow Tracking Server and Model Registry"
  labels:
    app: mlflow-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlflow-server
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      nodeSelector:
        workload-type: worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - mlflow-server
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: mlflow
          # Dùng image đã được build sẵn thay vì pip install lúc runtime
          image: tnvhoang/mlops-paas-mlflow:92c1790dcb0057200f5eb6272f3e1b590df28dcb
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          command:
            - mlflow
            - server
            - --host=0.0.0.0
            - --port=5000
            - --app-name=basic-auth
            - --allowed-hosts=mlflow.mlops-nids-nt114.id.vn,mlflow.mlops-nids-nt114.id.vn:443,localhost,127.0.0.1,mlflow-service,mlflow-service.default.svc.cluster.local,mlflow-service.default.svc.cluster.local:5000
            - --cors-allowed-origins=https://mlflow.mlops-nids-nt114.id.vn
            - --backend-store-uri=postgresql://mlflow:$(MLFLOW_DB_PASSWORD)@mlops-paas-postgres-rw:5432/mlflow
            - --default-artifact-root=s3://$(AWS_BUCKET_NAME)/mlflow-artifacts/
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 2Gi
# Service để expose MLflow Server nội bộ trong cluster
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  labels:
    app: mlflow-server
spec:
  type: ClusterIP
  selector:
    app: mlflow-server
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  template:
    spec:
      containers: []
